force-app/main/default/objects/Success_Plan__c/Success_Plan__c.object-meta.xml
<CustomObject>
    <label>Success Plan</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Success Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Success Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <description>Strategic account context for ACM 90-Day Onboarding. One record per onboarding.</description>
</CustomObject>