force-app/main/default/objects/Success_Plan__c/fields/Adoption_Gap_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Gap_Analysis__c</fullName>
    <label>Adoption Gap Analysis</label>
    <description>Underused features, blockers to adoption</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>