force-app/main/default/objects/Success_Plan__c/fields/ATS_Integration_ETA__c.field-meta.xml
<CustomField>
    <fullName>ATS_Integration_ETA__c</fullName>
    <label>ATS Integration ETA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>&lt;1 Week</fullName><default>false</default></value>
            <value><fullName>1-2 Weeks</fullName><default>false</default></value>
            <value><fullName>2-4 Weeks</fullName><default>false</default></value>
            <value><fullName>&gt;4 Weeks</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>