force-app/main/default/objects/Success_Plan__c/fields/Blockers_Open_Items__c.field-meta.xml
<CustomField>
    <fullName>Blockers_Open_Items__c</fullName>
    <label>Blockers / Open Items</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>