force-app/main/default/objects/Success_Plan__c/fields/Budget_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Budget_Timeline__c</fullName>
    <label>Budget Timeline</label>
    <description>e.g. Q4 planning Sept 2026</description>
    <length>255</length>
    <type>Text</type>
</CustomField>