force-app/main/default/objects/Success_Plan__c/fields/Campaign_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Feedback__c</fullName>
    <label>Campaign Feedback</label>
    <description>Reach campaign feedback and optimization signals</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>