force-app/main/default/objects/Success_Plan__c/fields/Customer_Goal__c.field-meta.xml
<CustomField>
    <fullName>Customer_Goal__c</fullName>
    <label>Customer Goal</label>
    <description>Core metric for 90-day review and P2A</description>
    <length>255</length>
    <type>Text</type>
</CustomField>