force-app/main/default/objects/Success_Plan__c/fields/Customer_Goal_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Customer_Goal_Confirmed__c</fullName>
    <label>Customer Goal Confirmed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>