force-app/main/default/objects/Success_Plan__c/fields/Early_Go_Live_Decision__c.field-meta.xml
<CustomField>
    <fullName>Early_Go_Live_Decision__c</fullName>
    <label>Early Go-Live Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Not Applicable - Standard</fullName><default>false</default></value>
            <value><fullName>Early Go-Live - Customer Request</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>