force-app/main/default/objects/Success_Plan__c/fields/Expansion_Signals__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Signals__c</fullName>
    <label>Expansion Signals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>None</fullName><default>false</default><label>None</label></value>
            <value><fullName>Additional Locations</fullName><default>false</default><label>Additional Locations</label></value>
            <value><fullName>Additional Products</fullName><default>false</default><label>Additional Products</label></value>
            <value><fullName>Team Growth</fullName><default>false</default><label>Team Growth</label></value>
            <value><fullName>Multiple Signals</fullName><default>false</default><label>Multiple Signals</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>