force-app/main/default/objects/Success_Plan__c/fields/Expectation_Below_Comment__c.field-meta.xml
<CustomField>
    <fullName>Expectation_Below_Comment__c</fullName>
    <label>Expectation Below Comment</label>
    <description>What explains the gap?</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>