force-app/main/default/objects/Success_Plan__c/fields/Expectation_Delta__c.field-meta.xml
<CustomField>
    <fullName>Expectation_Delta__c</fullName>
    <label>Expectation Delta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Within Range (+-20%)</fullName><default>false</default><label>Within Range (+-20%)</label></value>
            <value><fullName>Above Expectation</fullName><default>false</default><label>Above Expectation</label></value>
            <value><fullName>Below Expectation - Explained</fullName><default>false</default><label>Below Expectation - Explained</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>