force-app/main/default/objects/Success_Plan__c/fields/Forward_Planning__c.field-meta.xml
<CustomField>
    <fullName>Forward_Planning__c</fullName>
    <label>Forward Planning (3-12M)</label>
    <description>Post-review context for BAU successor</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>