force-app/main/default/objects/Success_Plan__c/fields/Goal_Reconnect_Notes__c.field-meta.xml
<CustomField>
    <fullName>Goal_Reconnect_Notes__c</fullName>
    <label>Goal Reconnect Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>