force-app/main/default/objects/Success_Plan__c/fields/Health_Red_Comment__c.field-meta.xml
<CustomField>
    <fullName>Health_Red_Comment__c</fullName>
    <label>Health Red Comment</label>
    <description>What is the issue and mitigation plan?</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>