force-app/main/default/objects/Success_Plan__c/fields/Health_Yellow_Comment__c.field-meta.xml
<CustomField>
    <fullName>Health_Yellow_Comment__c</fullName>
    <label>Health Yellow Comment</label>
    <description>What is the gap and plan to return to green?</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>