force-app/main/default/objects/Success_Plan__c/fields/Initial_Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Initial_Risk_Assessment__c</fullName>
    <label>Initial Risk Assessment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>