force-app/main/default/objects/Success_Plan__c/fields/Internal_Dynamics__c.field-meta.xml
<CustomField>
    <fullName>Internal_Dynamics__c</fullName>
    <label>Internal Dynamics</label>
    <description>Blockers, influencers, org politics</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>