force-app/main/default/objects/Success_Plan__c/fields/KPI_Draft__c.field-meta.xml
<CustomField>
    <fullName>KPI_Draft__c</fullName>
    <label>KPI Draft</label>
    <description>Directional KPIs for review</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>