force-app/main/default/objects/Success_Plan__c/fields/Long_Term_View__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_View__c</fullName>
    <label>Long-Term View (3-12M)</label>
    <description>Hiring plans, budget cycles, seasonality, growth</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>