force-app/main/default/objects/Success_Plan__c/fields/Next_Step_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Recommendation__c</fullName>
    <label>Next-Step Recommendation (0-3M)</label>
    <description>Renewal/Conversion/Extension/At Risk with reasoning</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>