force-app/main/default/objects/Success_Plan__c/fields/Next_Step_Risk_Comment__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Risk_Comment__c</fullName>
    <label>Next Step Risk Comment</label>
    <description>Risk driver and retention plan?</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>