force-app/main/default/objects/Success_Plan__c/fields/Next_Step_Signal__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Signal__c</fullName>
    <label>Next Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>- (not yet assessed)</fullName><default>false</default><label>- (not yet assessed)</label></value>
            <value><fullName>Renewal Likely</fullName><default>false</default><label>Renewal Likely</label></value>
            <value><fullName>Conversion Possible</fullName><default>false</default><label>Conversion Possible</label></value>
            <value><fullName>Extension</fullName><default>false</default><label>Extension</label></value>
            <value><fullName>At Risk</fullName><default>false</default><label>At Risk</label></value>
            <value><fullName>Churn</fullName><default>false</default><label>Churn</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>