force-app/main/default/objects/Success_Plan__c/fields/O_Min_Gaps__c.field-meta.xml
<CustomField>
    <fullName>O_Min_Gaps__c</fullName>
    <label>O-Min Gaps</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>