force-app/main/default/objects/Success_Plan__c/fields/O_Min_Not_Reached_Comment__c.field-meta.xml
<CustomField>
    <fullName>O_Min_Not_Reached_Comment__c</fullName>
    <label>O-Min Not Reached Comment</label>
    <description>What is missing? Next steps and target date?</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>