force-app/main/default/objects/Success_Plan__c/fields/O_Min_Status__c.field-meta.xml
<CustomField>
    <fullName>O_Min_Status__c</fullName>
    <label>O-Min Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Validated</fullName><default>false</default><label>Validated</label></value>
            <value><fullName>Not Reached</fullName><default>false</default><label>Not Reached</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>