force-app/main/default/objects/Success_Plan__c/fields/Open_Items_Closed__c.field-meta.xml
<CustomField>
    <fullName>Open_Items_Closed__c</fullName>
    <label>Open Items Closed</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>