force-app/main/default/objects/Success_Plan__c/fields/Open_Items_F2F__c.field-meta.xml
<CustomField>
    <fullName>Open_Items_F2F__c</fullName>
    <label>Open Items from F2F</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>