force-app/main/default/objects/Success_Plan__c/fields/Operating_Model__c.field-meta.xml
<CustomField>
    <fullName>Operating_Model__c</fullName>
    <label>Operating Model</label>
    <description>Who uses the product, how, roles and process</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>