force-app/main/default/objects/Success_Plan__c/fields/Operational_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Operational_Maturity__c</fullName>
    <label>Operational Maturity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Fully Independent</fullName><default>false</default><label>Fully Independent</label></value>
            <value><fullName>Partially Independent</fullName><default>false</default><label>Partially Independent</label></value>
            <value><fullName>Not Independent</fullName><default>false</default><label>Not Independent</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>