force-app/main/default/objects/Success_Plan__c/fields/Operator_Availability__c.field-meta.xml
<CustomField>
    <fullName>Operator_Availability__c</fullName>
    <label>Operator Availability &amp; Comm Style</label>
    <type>Text</type>
    <length>255</length>
</CustomField>