force-app/main/default/objects/Success_Plan__c/fields/Operator_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Operator_Sentiment__c</fullName>
    <label>Operator Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Positive / Engaged</fullName><default>false</default><label>Positive / Engaged</label></value>
            <value><fullName>Neutral</fullName><default>false</default><label>Neutral</label></value>
            <value><fullName>Skeptical</fullName><default>false</default><label>Skeptical</label></value>
            <value><fullName>Disengaged</fullName><default>false</default><label>Disengaged</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>