force-app/main/default/objects/Success_Plan__c/fields/Org_Picture__c.field-meta.xml
<CustomField>
    <fullName>Org_Picture__c</fullName>
    <label>Complete Org Picture</label>
    <description>Hierarchy, decision-making, recruiting process, dynamics</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>