force-app/main/default/objects/Success_Plan__c/fields/Performance_Down_Comment__c.field-meta.xml
<CustomField>
    <fullName>Performance_Down_Comment__c</fullName>
    <label>Performance Down Comment</label>
    <description>What is causing the decline? Action taken?</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>