force-app/main/default/objects/Success_Plan__c/fields/Performance_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Performance_Review_Notes__c</fullName>
    <label>Performance Review Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>