force-app/main/default/objects/Success_Plan__c/fields/Performance_Signal__c.field-meta.xml
<CustomField>
    <fullName>Performance_Signal__c</fullName>
    <label>Performance Signal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Up</fullName><default>false</default><label>Up</label></value>
            <value><fullName>Flat</fullName><default>false</default><label>Flat</label></value>
            <value><fullName>Down</fullName><default>false</default><label>Down</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>