force-app/main/default/objects/Success_Plan__c/fields/Performance_vs_Goal__c.field-meta.xml
<CustomField>
    <fullName>Performance_vs_Goal__c</fullName>
    <label>Performance vs Goal</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>