force-app/main/default/objects/Success_Plan__c/fields/Primary_Operator__c.field-meta.xml
<CustomField>
    <fullName>Primary_Operator__c</fullName>
    <label>Primary Operator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SP Primary Operator</relationshipLabel>
    <relationshipName>SP_Primary_Operator</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>