force-app/main/default/objects/Success_Plan__c/fields/Progress_vs_Goals__c.field-meta.xml
<CustomField>
    <fullName>Progress_vs_Goals__c</fullName>
    <label>Progress vs Goals &amp; KPIs</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>