force-app/main/default/objects/Success_Plan__c/fields/Quick_Wins__c.field-meta.xml
<CustomField>
    <fullName>Quick_Wins__c</fullName>
    <label>Quick Wins</label>
    <description>e.g. high CTR, fast reactions</description>
    <length>255</length>
    <type>Text</type>
</CustomField>