force-app/main/default/objects/Success_Plan__c/fields/Recruiting_Process_E2E__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Process_E2E__c</fullName>
    <label>Recruiting Process E2E</label>
    <description>End-to-end recruiting process documentation</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>