force-app/main/default/objects/Success_Plan__c/fields/Relationship_Context_Check__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Context_Check__c</fullName>
    <label>Relationship &amp; Context Check</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>