force-app/main/default/objects/Success_Plan__c/fields/Results_ROI__c.field-meta.xml
<CustomField>
    <fullName>Results_ROI__c</fullName>
    <label>Results &amp; ROI</label>
    <description>Achievements in numbers, KPI deltas vs Day 0</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>