force-app/main/default/objects/Success_Plan__c/fields/Risks_Mitigation__c.field-meta.xml
<CustomField>
    <fullName>Risks_Mitigation__c</fullName>
    <label>Risks &amp; Mitigation</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>