force-app/main/default/objects/Success_Plan__c/fields/Senior_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Senior_Stakeholder__c</fullName>
    <label>Senior Stakeholder</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SP Senior Stakeholder</relationshipLabel>
    <relationshipName>SP_Senior_Stakeholder</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>