force-app/main/default/objects/Success_Plan__c/fields/SS_Alignment__c.field-meta.xml
<CustomField>
    <fullName>SS_Alignment__c</fullName>
    <label>SS Alignment</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>