force-app/main/default/objects/Success_Plan__c/fields/SS_Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>SS_Engagement_Status__c</fullName>
    <label>SS Engagement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Connected</fullName><default>false</default><label>Not Connected</label></value>
            <value><fullName>Attempt 1 - No Response</fullName><default>false</default><label>Attempt 1 - No Response</label></value>
            <value><fullName>Attempt 2 - No Response</fullName><default>false</default><label>Attempt 2 - No Response</label></value>
            <value><fullName>Connected</fullName><default>false</default><label>Connected</label></value>
            <value><fullName>F2F Attended</fullName><default>false</default><label>F2F Attended</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>