force-app/main/default/objects/Success_Plan__c/fields/SS_Present_at_F2F__c.field-meta.xml
<CustomField>
    <fullName>SS_Present_at_F2F__c</fullName>
    <label>SS Present at F2F</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default></value>
            <value><fullName>No</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>